--- a/docs-source/master.html
+++ b/docs-source/master.html
@@ -26,6 +26,9 @@
             <a class="nav-link" href="index.html">Docs</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="sitemap.html">Sitemap</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://github.com/sparkjavateam/spark">Github</a>
           </li>
         </ul>
